--- a/lab11-uart/platformio.ini
+++ b/lab11-uart/platformio.ini
@@ -8,18 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:bluepill_f103c8_128k]
+[env:bluepill_f103c8_128k_fake]
 platform = ststm32
 board = bluepill_f103c8_128k_fake
 framework = stm32cube
-upload_flags = -c "set CPUTAPID 0x2ba01477" 
 debug_tool = stlink
-debug_server = 
-    /home/henrique/.platformio/packages/tool-openocd/bin/openocd 
-    -s /home/henrique/.platformio/packages/tool-openocd/scripts 
-    -f interface/stlink.cfg 
-    -c "transport select hla_swd" 
-    -c "set CPUTAPID 0x2ba01477" 
-    -f target/stm32f1x.cfg 
-    -c "reset_config none" 
 
